# cookiecutter-python-template

./: .bandit  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml  test.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: bump-version.yaml  main-updated.yaml  master-updated.yaml  pushed.yaml  python-check.yaml
docs/: README.md
hooks/: post_gen_project.py  pre_gen_project.py
search/: search_index.json
tasks/: __init__.py  build.py  common.py  doc.py  env.py  git.py  secure.py  style.py  test.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .bandit  .dockerignore  .editorconfig  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  Dockerfile_template  LICENSE  MANIFEST.in  Pipfile  mkdocs.yml  pyproject.toml  pytest.ini  setup.cfg
{{cookiecutter.project_slug}}/.github/: pull_request_template.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  documentation.md
{{cookiecutter.project_slug}}/.github/workflows/: bump-version.yaml  cruft-update.yaml  master-updated.yaml  pushed.yaml  python-check.yaml  python-publish.yaml  {{cookiecutter.default_branch}}-updated.yaml
{{cookiecutter.project_slug}}/docs/: README.md  contributing.md
{{cookiecutter.project_slug}}/tasks/: __init__.py  build.py  common.py  doc.py  env.py  git.py  secure.py  style.py  test.py
