[tool.commitizen]
name = "cz_conventional_commits"
version = "1.10.1"
tag_format = "$version"
version_files = [
    "cookiecutter.json",
    "pyproject.toml"
]


[tool.mypy]
files = [
    "tasks",
    "hooks",
    "tests"
]
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true


[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
    "E501",
    "D1",
    "D415",
]

[tool.ruff.lint.isort]
known-first-party = ["tests"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pytest.ini_options]
minversion = "8.0.0"
testpaths = "tests"
addopts = "--strict-markers"
norecursedirs = [
    ".*",
    "build",
    "dist",
    "CVS",
    "_darcs",
    "{arch}",
    "*.egg",
    "venv",
    "env",
    "virtualenv"
]
markers = [
    "slow"
]


[tool.coverage]
    [tool.coverage.report]
    show_missing = true
    exclude_lines = [
        # Have to re-enable the standard pragma
        'pragma: no cover',

        # Don't complain about missing debug-only code:
        'def __repr__',
        'if self\.debug',

        # Don't complain if tests don't hit defensive assertion code:
        'raise AssertionError',
        'raise NotImplementedError',

        # Don't complain if non-runnable code isn't run:
        'if 0:',
        'if __name__ == .__main__.:'
    ]
    omit = [
        'env/*',
        'venv/*',
        '*/virtualenv/*',
        '*/virtualenvs/*',
        '*/tests/*'
    ]


[tool.poetry]
name = "cookiecutter-python-template"
version = "1.10.1"
description = ""
authors = ["Wei Lee <weilee.rx@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
# task management
invoke = "^2.2.0"
# test
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.0.0"
pytest-xdist = "^3.6.1"
pytest-cookies = "^0.6.1"
coverage = "^7.6.0"
# style
ruff = "^0.5.4"
mypy = "^1.11.0"
black = "^24.4.2"
# security
bandit = "^1.7.9"
pip-audit = "^2.7.3"
# git
commitizen = "^3.28.0"
pre-commit = "^3.7.1"
# documentation
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.30"

[build-system]
requires = ["poetry>=1.10.1"]
build-backend = "poetry.masonry.api"
